# Galleon

./: .gitignore  CMakeLists.txt  README.md
common/: config.hpp  control_math.cpp  control_math.hpp  control_protocol.cpp  control_protocol.hpp  status_led.cpp  status_led.hpp
components/button_test/: CMakeLists.txt  main.cpp
components/joystick_test/: CMakeLists.txt  main.cpp
components/led_test/: CMakeLists.txt  main.cpp
components/motor_driver_test/: CMakeLists.txt  main.cpp
components/servo/: servo.cpp  servo.hpp
components/servo_test/: CMakeLists.txt  main.cpp
receiver/: CMakeLists.txt  btstack_config.h  main.cpp  motor_controller.cpp  motor_controller.hpp
tests/: CMakeLists.txt  control_math_tests.cpp  protocol_tests.cpp
transmitter/: CMakeLists.txt  btstack_config.h  main.cpp  transmitter.gatt
